Fixed resizing on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,15 @@ header {
 }
 
 select {
-  width:fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 #stopwatch {
   font-size: 2em;
 }
 
-.buttons {
+#buttons {
   display: flex;
   justify-content: end;
 }
@@ -50,14 +51,14 @@ form {
   margin-top: 2vh;
 }
 
-.cards {
+#cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap:min(.4vw,6px);
 }
 
-.cards div {
+#cards div {
   border-radius: 10px;
 }
 
@@ -74,97 +75,91 @@ form {
   background-size: 30%;
 }
 
-.cleared {
+.hidden {
   visibility: hidden;
 }
 
-.cards img {
+.notDisplayed {
+  display: none;
+}
+
+.main img {
   visibility: hidden;
   -webkit-user-drag: none;
 }
 
-.resetInstructions {
-  margin-top: 2vh;
+#endScreen h1 {
+  margin-bottom:0px;
 }
 
-.endScreen {
-  display:none;
-  background-color: aqua;
-  margin: 0px;
-  padding: 0px;
+#endScreen p {
+  margin-top:0px;
 }
 
 footer, a {
-  margin-top: 2vh; 
   color:lightgrey;
 }
 
-p {
+/* p {
   margin: 0px;
-}
+} */
 
 @media (max-aspect-ratio: .4) {
-  .cards div {
+  #cards div {
       flex-basis: 21%;
   }
 }
 
 @media (min-aspect-ratio: .4) and (max-aspect-ratio: .6) {
-  .cards div {
+  #cards div {
       flex-basis: 19%;
   }
 }
 
 @media (min-aspect-ratio: .6) and (max-aspect-ratio: .7) {
-  .cards div {
+  #cards div {
       flex-basis: 16%;
   }
 }
 
 @media (min-aspect-ratio: .7) and (max-aspect-ratio: .8) {
-  .cards div {
+  #cards div {
       flex-basis: 15%;
   }
 }
 
 @media (min-aspect-ratio: .8) and (max-aspect-ratio: .9) {
-  .cards div {
+  #cards div {
       flex-basis: 14%;
   }
 }
 
 @media (min-aspect-ratio: .9) and (max-aspect-ratio: 1.1) {
-  .cards div {
+  #cards div {
       flex-basis: 13%;
   }
 }
 
 @media (min-aspect-ratio: 1.1) and (max-aspect-ratio: 1.3) {
-  .cards div {
+  #cards div {
       flex-basis: 12%;
   }
 }
 
 @media (min-aspect-ratio: 1.3) and (max-aspect-ratio: 1.7) {
-  .cards div {
+  #cards div {
       flex-basis: 11%;
   }
 }
 
-@media (min-aspect-ratio: 1.7) and (max-aspect-ratio: 1.9) {
-  .cards div {
-      flex-basis: 10%;
-  }
-}
-
-@media (min-aspect-ratio: 1.9) and (max-aspect-ratio: 2.1) {
-  .cards div {
+@media (min-aspect-ratio: 1.7) and (max-aspect-ratio: 2.1) {
+  #cards div {
       flex-basis: 9%;
   }
 }
 
 @media (min-aspect-ratio: 2.1) {
-  .cards div {
+  #cards div {
       flex-basis: 8%;
   }
 }
